name:                servant-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-api#readme
license:             BSD3
license-file:        LICENSE
author:              Leandro Soares
maintainer:          leandrosoares6@hotmail.com
copyright:           2019 Leandro Soares
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable servant-api
  main-is:             app/Main.hs
  ghc-options:         -Wall
  build-depends:
      aeson
    , base
    , servant-api
    , servant
    , servant-server
    , transformers
    , wai
    , warp
  default-language:    Haskell2010

library
  exposed-modules:   App
                 ,   Server
                 ,   Routes.UserApi
                 ,   Controllers.Controller
                 ,   Models.User
  
  hs-source-dirs:    src

  ghc-options:       -Wall

  build-depends:
      aeson
    , base
    , servant
    , servant-server
    , transformers
    , wai
    , warp
  default-language: Haskell2010