name:                servant-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-api#readme
license:             BSD3
license-file:        LICENSE
author:              Leandro Soares
maintainer:          leandrosoares6@hotmail.com
copyright:           2019 Leandro Soares
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable servant-api
  main-is:             app/Main.hs
  ghc-options:         -Wall -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
  
  build-depends:
      aeson
    , base
    , servant-api
    , servant
    , servant-server
    , transformers
    , wai
    , warp
    , postgresql-simple >= 0.5
    , postgresql-orm >= 0.5.1
    , servant-exceptions
    , text
  default-language:    Haskell2010

library
  exposed-modules:   App
                 ,   Configs.DbConfig
                 ,   Routes.MainApi
                 ,   Routes.UserApi
                 ,   Routes.ContactApi
                 ,   Controllers.UserController
                 ,   Controllers.ContactController
                 ,   Exceptions.UserException
                 ,   Models.User
                 ,   Models.Contact
                 ,   Models.Associations
  
  hs-source-dirs:    src

  ghc-options:       -Wall

  build-depends:
      aeson
    , bytestring 
    , base
    , servant
    , servant-server
    , transformers
    , wai
    , warp
    , http-api-data
    , postgresql-simple >= 0.5
    , resource-pool
    , servant-client
    , http-client
    , configurator
    , markdown-unlit
    , http-types
    , postgresql-orm >= 0.5.1
    , servant-exceptions
    , text
  default-language: Haskell2010